--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,8 +24,7 @@
 
         <activity
             android:name=".DetailPage"
-            android:exported="true"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
+            android:exported="true"  />
         <activity
             android:name=".MainActivity"
             android:exported="true">
